=== HEAD

* Use placeholder literalizer for regular association loading for up to 85% speedup (jeremyevans)

* Use placeholder literalizer for eager association loading for up to 20% speedup (jeremyevans)

* Make Model#marshallable! work correctly when using the tactical_eager_loading plugin (jeremyevans)

* Respect :foreign_key_constraint_name option when adding columns to existing table on MySQL (noah256) (#795)

* AssociationReflection#association_dataset now handles joining tables if necessary (jeremyevans)

* Support drop_view :if_exists option on SQLite, MySQL, H2, and HSQLDB (jeremyevans) (#793)

* Support drop_table :if_exists option on HSQLDB (jeremyevans)

* Add Database#transaction :auto_savepoint option, for automatically using a savepoint in nested transactions (jeremyevans)

* Add :server_version Database option on Microsoft SQL Server, instead of querying the database for it (jeremyevans)

* Support :correlated_subquery as an eager_graph and filter by associations limit strategy for one_to_* associations (jeremyevans)

* Support named paramters in call_mssql_sproc on Microsoft SQL Server (y.zemlyanukhin, jeremyevans) (#792)

* Handle placeholder literalizer arguments when emulating offsets (jeremyevans)

* Don't attempt to emulate offsets if the dataset uses literal SQL (jeremyevans)

* Use a UNION-based strategy by default to eagerly load limited associations (jeremyevans)

* Support offsets without limits on MySQL, SQLite, H2, SQLAnywhere and CUBRID (jeremyevans)

* Remove the install/uninstall rake tasks (jeremyevans)

* Use INSERT VALUES with multiple rows for Dataset#import and #multi_insert on more databases (jeremyevans)

* Support common table expressions (WITH clause) on SQLite >=3.8.3 (jeremyevans)

=== 4.9.0 (2014-04-01)

* Recognize CHECK constraint violations on newer versions of SQLite (jeremyevans)

* Do not attempt to eager load when calling Dataset#columns in the eager_each plugin (jeremyevans)
